# one-to-many

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
configs/: camera.yaml  colmap.yaml  dataset.yaml  pipeline.yaml  pipeline_full.yaml  pipeline_masked.yaml  pipeline_rack.yaml  robot.yaml  splat.yaml  worldmodel.yaml
docs/: alignment.md  data.md  data_contracts.md  genwarp.md  index.md  mvgenmaster.md  representations.md  stretch_dynamic.md  synthetic_data.md  usage.md  worldmodel.md
docs/pipeline/: 01_frames.md  02_masking.md  03_colmap.md  04_splat.md  05_render.md  06_robot_overlay.md
notebooks/: explore_episode.py  inspect_splat.py  verify_alignment.py
scripts/: 01_extract_frames.py  02_generate_masks.py  03_run_colmap.py  03b_register_zed.py  03c_dense_depth_init.py  04_train_splat.py  04b_align_world.py  05_render_trajectory.py  06_render_matched.py  07_synthesize_episode.py  08_compare_video.py  09_fill_methods_demo.py  10_zed_metric_scene.py  11_fuse_wrist_cloud.py  12_mvgen_demo.py  13_novel_thirdperson.py  _common.py  build_color_robot.py  run_pipeline.py
src/o2m/: __init__.py
src/o2m/align/: __init__.py  world.py  zed.py
src/o2m/colmap/: __init__.py  model_io.py  runner.py  to_nerfstudio.py
src/o2m/config/: __init__.py  config.py  paths.py
src/o2m/depth/: __init__.py  dense_init.py  mono.py  video.py
src/o2m/masking/: __init__.py  base.py  color_motion.py  io.py  roi_masker.py  sam_masker.py
src/o2m/render/: __init__.py  composite.py  (+3 more)
tests/: test_config_and_trajectory.py  test_geometry_alignment.py  test_transforms_schema.py
(+29 files in other folders)
